fix(core): INVOKEDYNAMIC 필드 핸들 오분류와 순회 순서 불안정성 수정
record 의 toString/equals/hashCode 가 쓰는 ObjectMethods.bootstrap 부트스트랩
인자에는 컴포넌트마다 REF_getField 핸들이 실리는데, 태그를 보지 않고 모든
Handle 을 lambdaBodies 에 담아 MethodRef 계약이 깨졌습니다. handle.getTag()
로 메서드 핸들(태그 5 이상)만 거르도록 고쳤습니다.

Set.copyOf/Map.copyOf 는 순회 순서를 보장하지 않아 writtenOwnFields 등의
결과가 JVM 기동마다 달라질 수 있었습니다. LinkedHashSet/LinkedHashMap 을
Collections.unmodifiable* 로 감싸 삽입 순서를 유지하도록 통일했습니다.

MethodRef.simpleOwnerName() 은 계획 전체에서 호출처가 없는 죽은 코드라
제거했습니다.

settings.gradle 에서 디렉터리가 없는 invalidation-map-spring-boot-starter
include 를 제거했습니다. Gradle 8 에서는 deprecation 경고만 냈지만 Gradle 9
에서는 빌드가 실패하며, Task 2~8 여덟 개 태스크의 빌드 출력에 불필요한
경고가 계속 남는 문제였습니다. 그 모듈은 Task 9 에서 디렉터리와 함께
다시 include 합니다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>